--- a/src/views/Frame/index.less
+++ b/src/views/Frame/index.less
@@ -11,3 +11,20 @@
         height: 20px;
     }
 }
+.div-head2 {
+    border-bottom: 1px solid #dedede;
+}
+.tail{
+    padding-left: 20px;
+    .help-item {
+        float : left;
+        padding-right: 60px;
+        li {
+            list-style-type : none
+        }
+        a {
+            color: #847F7E
+        }
+        
+    }
+}
