--- a/src/views/Home/Home.less
+++ b/src/views/Home/Home.less
@@ -9,7 +9,8 @@
 .home-jingxuan{
     height : 700px;
     .home-jingxuan-title{
-        font-size: large;
+        font-weight: 900;
+        font-size: 25px;
         margin: 0 auto;
         width: 200px;
         padding: 20px;
